basic popup in place

--- a/content/_wrappers/wrapper.html
+++ b/content/_wrappers/wrapper.html
@@ -10,6 +10,7 @@
     [! include "_wrappers/_noscript.html" !]
 
     <bitty-3-0 data-connect="/scripts/bitty-page.js" 
+      data-send="clear"
       class="load-hider content-wrapper">
 
       [! include "_wrappers/_header.html" !]
