added note about needing to allow popups

--- a/content/index.html
+++ b/content/index.html
@@ -22,6 +22,9 @@
 <button data-send="launch">Launch</button>
 </div>
 
+<p>Note: you'll probably need to allow popups
+  from this site the first time you use 
+  the tool</p>
 <hr />
 
 [!- endblock -!]
