added link to launch post

--- a/content/index.html
+++ b/content/index.html
@@ -24,7 +24,16 @@
 
 <p>Note: you'll probably need to allow popups
   from this site the first time you use 
-  the tool</p>
+  the tool.</p>
+
+<p>You can read a little more about why I built 
+  this here: <a href="https://www.alanwsmith.com/en/34/qy/tq/of/">Popup Launcher Launch</a>.
+</p>
+
+<p>Enjoy!</p>
+
+<p>-a</p>
+
 <hr />
 
 [!- endblock -!]
